добавлена мультиязычность, разные способы сохранения в файл